bk_ida/gccida/g2/gen_split_956
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_956/src/insn-emit.c:8711:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_lowpart( ( machine_mode)( !v2 + 4), v3); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_956/src/insn-emit.c:8715:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_lowpart( ( machine_mode)( !v2 + 4), v5); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_956/src/insn-emit.c:8721:31: error: use of undeclared identifier 'machine_mode'
v10 = gen_rtx_fmt_ee( MULT, ( machine_mode)( !v2 + 4), v8, v7); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_956/src/insn-emit.c:8722:31: error: use of undeclared identifier 'machine_mode'
v11 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v10, v9); 
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_956/src/obj/insn-emit.o] Error 1
